--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -36,14 +36,14 @@ jobs:
             # Install dependencies without dev packages
             composer install --no-interaction --prefer-dist --optimize-autoloader
 
-            # Clear old caches
-            php artisan config:clear
-            php artisan route:clear
-            php artisan view:clear
-            php artisan cache:clear
+             sudo php artisan config:clear
+            sudo php artisan route:clear
+            sudo php artisan view:clear
+            sudo php artisan cache:clear
 
-            # Rebuild caches
-            php artisan config:cache
-            php artisan route:cache
-            php artisan view:cache
-            php artisan optimize:clear
+            sudo php artisan migrate --force
+
+            sudo php artisan config:cache
+            sudo php artisan route:cache
+            sudo php artisan view:cache
+            sudo php artisan optimize:clear
