--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^7.3|^8.0",
         "arielmejiadev/larapex-charts": "^2.1",
+        "cloudinary-labs/cloudinary-laravel": "^2.1",
         "consoletvs/charts": "^6.5",
         "doctrine/dbal": "^3.1",
         "fideloper/proxy": "^4.4",
