--- a/composer.json
+++ b/composer.json
@@ -15,13 +15,16 @@
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "http-interop/http-factory-guzzle": "^1.2",
         "intervention/image": "^2.7",
         "khill/lavacharts": "^3.1",
         "laravel/framework": "^8.12",
+        "laravel/scout": "^9.8",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.2",
         "league/flysystem-aws-s3-v3": "^1.0",
         "maatwebsite/excel": "^3.1",
+        "meilisearch/meilisearch-php": "^1.16",
         "rap2hpoutre/fast-excel": "^3.0",
         "spatie/laravel-feed": "^4.1",
         "twilio/sdk": "^6.28",
@@ -38,7 +41,10 @@
     "config": {
         "optimize-autoloader": true,
         "preferred-install": "dist",
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "php-http/discovery": true
+        }
     },
     "extra": {
         "laravel": {
