--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -23,8 +23,8 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           password: ${{ secrets.PASSWORD }}
           script: |
-            git config --global --add safe.directory /home/ali-cms/htdocs/dev-cms.savoirproperties.com/cms-savoir
-            cd /home/ali-cms/htdocs/dev-cms.savoirproperties.com/cms-savoir
+            git config --global --add safe.directory /home/savoirproperties-cms/htdocs/cms.savoirproperties.com
+            cd /home/savoirproperties-cms/htdocs/dev-cms.savoirproperties.com/cms-savoir
 
             git fetch origin
             sudo git reset --hard origin/main # change 'main' if using a different branch
